apps/common/torrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: torrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: nfs-volume
              mountPath: /nas
          ports:
            - name: torrent-ui
              containerPort: 8080          # qBittorrent Web UI
              protocol: TCP
          # Set qBittorrent to use Gluetun's DNS to ensure all traffic is routed via VPN
          dnsPolicy: None
          dnsConfig:
            nameservers:
            - 127.0.0.1                   # Gluetun's DNS resolver inside the Pod
        - name: gluetun
          image: qmcgaw/gluetun
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
          securityContext:
              capabilities:
                add: ["NET_ADMIN"]
          volumeMounts:
            - name: vpn-config
              mountPath: /config
      volumes:
        - name: vpn-config
          persistentVolumeClaim:
            claimName: vpn-config-claim
        - name: config
          persistentVolumeClaim:
            claimName: torrent-config-claim
        - name: downloads
          persistentVolumeClaim:
            claimName: torrent-download-claim
        - name: nfs-volume
          nfs:
            server: "${qnap_ip}"
            path: "/k8s/torrents"
