apps/common/torrent/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
  namespace: torrent
spec:
  selector:
    app: deluge
  type: LoadBalancer
  loadBalancerIP: "${torrent_ip}"
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8112
