apps/common/torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent-internal
  namespace: torrent
spec:
  selector:
    app: qbittorrent
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: torrent-ui
      protocol: TCP
