apps/common/torrent/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: torrent-gateway
  namespace: torrent
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "torrent.${domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${APP}-tls-prod"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: torrent
  namespace: torrent
spec:
  parentRefs:
    - name: torrent-gateway
  hostnames:
    - "torrent.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: torrent-internal
          port: 80
